@startuml
skinparam classAttributeIconSize 0

package "SDV Logic" {
  class LogicMain {
    +main()
    +run_logic(logic_module, cycle_time=0.1)
  }

  class KuksaConnection {
    +connect()
    +get(signal, default=None)
    +set(signal, value)
    +publish(signal, value)
  }

  class StartSequence {
    +run()
  }

  class AutoLock {
    +run()
    +set_all_doors_locked(locked)
  }

  class PowertrainSafetyLogic {
    +run()
    +is_forward(gear)
    +is_reverse(gear)
  }

  class PDCLogic {
    +run()
    +is_reverse(gear)
    +safe_kuksa_set(signal, value)
    +trigger_intermittent_buzzer(current_time, interval, active_level)
  }

  class LightsLogic {
    +run()
    +handle_double_blink(current_time)
    +handle_buzzer_timeout(current_time)
    +handle_unlock(current_time)
    +handle_ready()
    +handle_lock(current_time)
  }

  class UnrealSender {
    +run()
  }

  class ConfigLoader {
    +load_configs(config_folder="config")
  }

  class InitKuksaSignals {
    +reset_vehicle_signals(kuksa, verbose=False)
  }
}

LogicMain --> ConfigLoader : load_configs()
LogicMain --> KuksaConnection : instantiate
LogicMain --> InitKuksaSignals : reset_vehicle_signals()
LogicMain --> StartSequence : instantiate
LogicMain --> AutoLock : instantiate
LogicMain --> PowertrainSafetyLogic : instantiate
LogicMain --> PDCLogic : instantiate
LogicMain --> LightsLogic : instantiate
LogicMain --> UnrealSender : instantiate

StartSequence --> KuksaConnection : uses
AutoLock --> KuksaConnection : uses
PowertrainSafetyLogic --> KuksaConnection : uses
PDCLogic --> KuksaConnection : uses
LightsLogic --> KuksaConnection : uses
UnrealSender --> KuksaConnection : uses

StartSequence --> "vehicle_state : dict" : reads/writes
AutoLock --> "vehicle_state : dict" : reads
PowertrainSafetyLogic --> "vehicle_state : dict" : reads
PDCLogic --> "vehicle_state : dict" : reads
LightsLogic --> "vehicle_state : dict" : reads
UnrealSender --> "vehicle_state : dict" : reads

note right of LogicMain
  - Creates shared vehicle_state
  - Starts threads for each module
  - Loads YAML configs
  - Connects to KUKSA broker
end note

note right of StartSequence
  - unlock/lock detection
  - ignition validation
  - engine start/stop
end note

note right of AutoLock
  - speed-based door locking
  - uses gear & speed signals
end note

note right of PowertrainSafetyLogic
  - gear/speed safety rules
  - prevents unsafe gear changes
end note

note right of PDCLogic
  - reverse detection
  - backup light and buzzer control
end note

note right of LightsLogic
  - lighting feedback on unlock/lock/ready
  - non-blocking blink & buzzer timers
end note

note right of UnrealSender
  - sends runtime state to Unreal Engine
  - read-only signal exporter
end note
@enduml
